--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.8",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
