--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
+    "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.11.17",
+    "lucide-react": "^0.465.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
