--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.1.8",
+    "@mui/x-charts": "^7.23.2",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.465.0",
     "react": "^18.3.1",
@@ -26,6 +29,7 @@
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.14.5"
   },
