--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.8",
     "@mui/x-charts": "^7.23.2",
     "@reduxjs/toolkit": "^2.4.0",
+    "appwrite": "^16.1.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "firebase": "^11.1.0",
